--- a/lab16.tex
+++ b/lab16.tex
@@ -20,9 +20,9 @@
 «СЕВЕРО-КАВКАЗСКИЙ ФЕДЕРАЛЬНЫЙ УНИВЕРСИТЕТ»\\
 ФАКУЛЬТЕТ МАТЕМАТИКИ И КОМПЬЮТЕРНЫХ НАУК ИМЕНИ ПРОФЕССОРА Н.И.ЧЕРВЯКОВА}
 \vfill
-\Large{\textbf{ЛАБОРАТОРНАЯ РАБОТА №16}}\\[2mm]
+\Large{\textbf{ЛАБОРАТОРНАЯ РАБОТА №15}}\\[2mm]
 \large{Алгоритмизация и программирование}\\[6mm]
-\Large{\textbf{Вариант 9}}\\[20mm]
+\large{\textbf{Список}}\\[20mm]
 \end{center}
 \begin{flushright}
 \large{
