--- a/lab17.tex
+++ b/lab17.tex
@@ -15,30 +15,30 @@
 
 % Титульный лист
 \begin{titlepage}
-\begin{center}
-{\large\scshape\bfseries
-министерство науки и высшего образования российской федерации\\
-федеральное государственное автономное образовательное учреждение высшего образования\\
-«северо-кавказский федеральный университет»\\
-факультет математики и компьютерных наук имени профессора н.и.червякова}
-\vfill
-\Large{\textbf{ЛАБОРАТОРНАЯ РАБОТА №17}}\\[2mm]
-\large{Алгоритмизация и программирование}\\[6mm]
-\Large{\textbf{Вариант 9}}\\[20mm]
-\end{center}
-\begin{flushright}
-\textbf{Выполнил студент:}\\
-Сивко Иван Андреевич\\
-студент 2 курса\\
-группа ПМИ-б-о-23-2,\\
-направление подготовки 01.03.02\\[5mm]
-\textbf{Проверил:}\\
-Ассистент кафедры вычислительной\\
-математики и кибернетики, к.ф.-м.н.,\\
-Черкашина Анастасия Андреевна
-\end{flushright}
-\vfill
-\centerline{ \the\year\ г. }
+  \begin{center}
+    {\large\scshape\bfseries
+    министерство науки и высшего образования российской федерации\\
+    федеральное государственное автономное образовательное учреждение высшего образования\\
+    «северо-кавказский федеральный университет»\\
+    факультет математики и компьютерных наук имени профессора н.и.червякова}
+    \vfill
+    \Large{\textbf{ЛАБОРАТОРНАЯ РАБОТА №17}}\\[2mm]
+    \large{Алгоритмизация и программирование}\\[6mm]
+    \large{\textbf{Деревья}}\\[20mm]
+  \end{center}
+  \begin{flushright}
+    \textbf{Выполнил студент:}\\
+    Сивко Иван Андреевич\\
+    студент 2 курса\\
+    группа ПМИ-б-о-23-2,\\
+    направление подготовки 01.03.02\\[5mm]
+    \textbf{Проверил:}\\
+    Ассистент кафедры вычислительной\\
+    математики и кибернетики, к.ф.-м.н.,\\
+    Черкашина Анастасия Андреевна
+  \end{flushright}
+  \vfill
+  \centerline{ \the\year\ г. }
 \end{titlepage}
 
 
@@ -46,12 +46,12 @@
 \centerline{\large\textbf{Вариант 9}}
 \textbf{Цель:}
 \begin{small}
-\begin{itemize}
-\item Совершенствование навыков разработки программ в среде программирования
-\item Совершенствование навыков в программировании с использованием указателей
-\item Исследование процесса формирования элементов простейшей динамической структуры данных – двоичное дерево
-\item Исследование операций при работе с двоичными деревьями
-\end{itemize}
+  \begin{itemize}
+    \item Совершенствование навыков разработки программ в среде программирования
+    \item Совершенствование навыков в программировании с использованием указателей
+    \item Исследование процесса формирования элементов простейшей динамической структуры данных – двоичное дерево
+    \item Исследование операций при работе с двоичными деревьями
+  \end{itemize}
 \end{small}
 
 \section*{Задание 1}
@@ -67,30 +67,30 @@
 Программа предназначена для работы с бинарным деревом поиска (Binary Search Tree, BST) и выполняет операции добавления, отображения и модификации данных. Алгоритм выполнения программы следующий:
 
 \begin{enumerate}
-\item \textbf{Ввод чисел:}
-\begin{itemize}
-\item Пользователь вводит целые числа построчно.
-\item Ввод завершается пустой строкой.
-\item Числа добавляются в бинарное дерево поиска.
-\end{itemize}
+  \item \textbf{Ввод чисел:}
+    \begin{itemize}
+      \item Пользователь вводит целые числа построчно.
+      \item Ввод завершается пустой строкой.
+      \item Числа добавляются в бинарное дерево поиска.
+    \end{itemize}
 
-\item \textbf{Печать дерева:}
-\begin{itemize}
-\item Дерево выводится на экран в упорядоченном (in-order) порядке.
-\item Если дерево пустое, вывод на экран не выполняется.
-\end{itemize}
+  \item \textbf{Печать дерева:}
+    \begin{itemize}
+      \item Дерево выводится на экран в упорядоченном (in-order) порядке.
+      \item Если дерево пустое, вывод на экран не выполняется.
+    \end{itemize}
 
-\item \textbf{Замена отрицательных значений:}
-\begin{itemize}
-\item В каждом узле дерева отрицательные значения заменяются их модулями.
-\end{itemize}
+  \item \textbf{Замена отрицательных значений:}
+    \begin{itemize}
+      \item В каждом узле дерева отрицательные значения заменяются их модулями.
+    \end{itemize}
 
-\item \textbf{Повторная печать дерева:}
-\begin{itemize}
-\item После преобразования дерево снова выводится в упорядоченном виде.
-\end{itemize}
+  \item \textbf{Повторная печать дерева:}
+    \begin{itemize}
+      \item После преобразования дерево снова выводится в упорядоченном виде.
+    \end{itemize}
 
-\item \textbf{Выход:} Программа завершает свою работу.
+  \item \textbf{Выход:} Программа завершает свою работу.
 \end{enumerate}
 
 \subsubsection{Математическая модель}
@@ -100,14 +100,14 @@
 \[ \forall x \in L, \; x < N; \quad \forall y \in R, \; y \geq N. \]
 \subsection{Диаграмма:}
 \begin{figure}[h]
-\centering
-\includegraphics[width=0.8\textwidth]{data/diagram17.png}
+  \centering
+  \includegraphics[width=0.8\textwidth]{data/diagram17.png}
 \end{figure}
 \subsection{Код:}
 \verbatiminput{data/task17.cpp}
 \href{https://raw.githubusercontent.com/John1400800/stuff/refs/heads/main/c_learning/home_works/task17.cpp}{source code}
 \subsection{Результат работы программы:}
 \begin{figure}[h]
-\includegraphics[width=0.8\textwidth]{data/demo17.png}
+  \includegraphics[width=0.8\textwidth]{data/demo17.png}
 \end{figure}
 \end{document}
