--- a/lab20.tex
+++ b/lab20.tex
@@ -102,4 +102,27 @@
 \begin{figure}[H]
   \includegraphics[width=0.7\textwidth]{data/demo20_1.png}
 \end{figure}
+\href{https://raw.githubusercontent.com/John1400800/reports/refs/heads/main/data/tasks20/max.hpp}{src: max.hpp}
+\href{https://raw.githubusercontent.com/John1400800/reports/refs/heads/main/data/tasks20/max.cpp}{src: max.cpp}
+\href{https://raw.githubusercontent.com/John1400800/reports/refs/heads/main/data/tasks20/main.cpp}{src: main.cpp}
+\section*{Задание 2}
+В соответствии со своим вариантом лабораторной работы №16 Задания 2, оформить
+функции, реализующие основные алгоритмы работы с динамическими структурами
+данных, в виде модуля. Организовать вызов модуля программой.
+\subsection{Код:}
+\begin{itemize}
+  \item {\texttt{\textbf func.hpp}}
+    \verbatiminput{data/tasks20_2/func.hpp}
+  \item {\texttt{\textbf func.cpp}}
+    \verbatiminput{data/tasks20_2/func.cpp}
+  \item {\texttt{\textbf main.cpp}}
+    \verbatiminput{data/tasks20_2/main.cpp}
+\end{itemize}
+\href{https://raw.githubusercontent.com/John1400800/stuff/refs/heads/main/c_learning/home_works/task20_2/func.hpp}{src: func.hpp}
+\href{https://raw.githubusercontent.com/John1400800/stuff/refs/heads/main/c_learning/home_works/task20_2/func.cpp}{src: func.cpp}
+\href{https://raw.githubusercontent.com/John1400800/stuff/refs/heads/main/c_learning/home_works/task20_2/main.cpp}{src: main.cpp}
+\subsection{Результат работы программы:}
+\begin{figure}[H]
+  \includegraphics[width=0.4\textwidth]{data/demo16_2.png}
+\end{figure}
 \end{document}
